--- a/chat/package.json
+++ b/chat/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.8.1",
     "multiparty": "^4.1.3",
     "mysql": "^2.14.1",
+    "node-fetch": "^1.7.3",
     "serve-favicon": "~2.4.2",
     "session": "^0.1.0",
     "socket.io": "^2.0.3",
