--- a/chat/package.json
+++ b/chat/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.5",
     "formidable": "^1.1.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy": "^1.16.2",
     "locutus": "^2.0.9",
     "log4js": "^2.3.3",
     "memcached": "^2.2.2",
